# thai-securities-data

./: .gitignore  README.md  config.py  metadata.json  metadata_en.json  metadata_th.json  pyproject.toml  thai_securities_all_en.json  thai_securities_all_th.json  thai_securities_by_sector.json  thai_securities_by_sector_en.json  thai_securities_by_sector_th.json  thai_securities_compact_en.json  thai_securities_compact_th.json  thai_securities_market_mai_en.json  thai_securities_market_mai_th.json  thai_securities_market_set.json  thai_securities_market_set_en.json  thai_securities_market_set_th.json
.github/workflows/: update-securities.yml
scripts/: update_securities.py
services/securities/: fetcher.py  json_exporter.py  parser.py
tests/: test_fetcher.py  test_json_exporter.py  test_parser.py
tests/fixtures/: sample_set_response_en.html  sample_set_response_th.html
